# Flow

./: env.example
back-end/entity/src/: file_metadata.rs  knowledge_edge.rs  knowledge_node.rs  lib.rs  prelude.rs  repository.rs
back-end/event/: Cargo.toml
back-end/event/src/: downstream.rs  lib.rs  store.rs  types.rs  validation.rs
back-end/event/tests/: concurrency.rs  downstream.rs  integration.rs  mod.rs  property.proptest-regressions  property.rs  store.rs  types.rs  validation.rs
back-end/event/tests/fixtures/: mod.rs
back-end/migration/src/: lib.rs  m20250811_150000_create_repository.rs  m20250811_160000_create_file_metadata.rs  m20250811_170000_create_knowledge_graph.rs
back-end/node/: Cargo.toml
back-end/node/src/: cli.rs  knowledge_service.rs  lib.rs  main.rs  repository_service.rs  runner.rs  space_watcher.rs
back-end/node/src/api/: node.rs
back-end/node/src/bootstrap/: config.rs
back-end/node/src/modules/: space.rs
back-end/node/tests/: knowledge_repository.rs  mod.rs  space_persistence.rs
specs/changelog/: 2025-10-18.md
