[package]
name = "event"
version = "0.1.0"
edition = "2024"


[dependencies]
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonschema = "0.33.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
sled = "0.34.7"
thiserror.workspace = true
ulid = { version = "1.2.1", features = ["serde"] }
