[package]
name = "event"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
jsonschema = "0.33.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
sled = "0.34.7"
thiserror.workspace = true
tracing = "0.1.41"
ulid = { version = "1.2.1", features = ["serde"] }
